[package]
name = "tgit"
version = "0.1.0"
authors = ["Samuel Kubai Kamau <samuel.kubai@andela.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
rust-crypto = "0.2.36"
regex = "1"
lazy_static = "1.3.0"
